Fixed input on employee punch in not showing up correctly

--- a/admin/css/sb-admin.css
+++ b/admin/css/sb-admin.css
@@ -105,7 +105,7 @@ h1 {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-.form-signin input[type="pin"] {
+.form-signin input[type="password"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
